force-app/main/default/objects/Condition__mdt/Condition__mdt.object-meta.xml
<CustomObject>
    <description>Stores individual conditions for validation rules</description>
    <label>Condition</label>
    <pluralLabel>Conditions</pluralLabel>
</CustomObject>