force-app/main/default/objects/Condition__mdt/fields/Is_Child_Object__c.field-meta.xml
<CustomField>
    <fullName>Is_Child_Object__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this condition evaluates a child object relationship</description>
    <label>Is Child Object</label>
    <type>Checkbox</type>
</CustomField>