force-app/main/default/objects/Condition__mdt/fields/Logic_Type__c.field-meta.xml
<CustomField>
    <fullName>Logic_Type__c</fullName>
    <description>Logic type for child conditions</description>
    <label>Logic Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AND</fullName>
            </value>
            <value>
                <fullName>OR</fullName>
            </value>
            <value>
                <fullName>CUSTOM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>