force-app/main/default/objects/Condition__mdt/fields/Parent_Rule__c.field-meta.xml
<CustomField>
    <fullName>Parent_Rule__c</fullName>
    <description>Parent rule this condition belongs to</description>
    <label>Parent Rule</label>
    <referenceTo>Parent_Rule__mdt</referenceTo>
    <relationshipLabel>Conditions</relationshipLabel>
    <relationshipName>Conditions</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>